--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,6 @@
 
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
     <div class="container">
-
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,11 +24,10 @@
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
-          <li class="nav-item">
-            <a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a>
-          </li>
+          <li class="nav-item"><a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a></li>
         </ul>
       </div>
     </div>
