--- a/ontheissues.html
+++ b/ontheissues.html
@@ -23,11 +23,10 @@
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
-          <li class="nav-item">
-            <a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a>
-          </li>
+          <li class="nav-item"><a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a></li>
         </ul>
       </div>
     </div>
