--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
   
-      <div class="collapse navbar-collapse" id="main-navbar">
+      <div class="collapse navbar-collapse nav-menu" id="main-navbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
@@ -32,7 +32,7 @@
       </div>
     </div>
   </nav>
-  
+
   <!-- Contact Form -->
   <img class="newlogo img-fluid mt-5" src="./logo42425.jpg" alt="KVK campaign logo" />
 
