--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <body>
 
-  <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
+  <nav class="navbar navbar-expand-md navbar-dark nav-menu" style="background-color: #003366;">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
   
-      <div class="collapse navbar-collapse" id="main-navbar">
+      <div class="collapse navbar-collapse nav-menu" id="main-navbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
