--- a/ontheissues.html
+++ b/ontheissues.html
@@ -18,7 +18,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
   
-      <div class="collapse navbar-collapse" id="main-navbar">
+      <div class="collapse navbar-collapse nav-menu" id="main-navbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
