--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -24,34 +24,30 @@
               <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
               <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
               <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
-              <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
-              <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
+              <li class="nav-item"><a class="nav-link" href="./contact.html">Contact/Volunteer</a></li>
               <li class="nav-item"><a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a></li>
             </ul>
           </div>
         </div>
       </nav>
 
-  
-<p>
-    <!-- Lets add another page called Endorsements. At the top of the page put the word "Endorsements" -->
+  <div class="container">
+    <img class="img-fluid" src="./district7.jpg" alt="Map of District 7"/>
+  </div>
 
-<!-- 
-David Mathews
+   <!--
+Map of District 7
+
+Anna Marie, 
+Paul Harrison, 
+Dave Mathews, 
+ one at Resurrection,
+  one at Rye Free Reading Room, 
+  one at City Hall (courtesy of myRye.com)
 
 
-Write: Page in Progress then have some blank thumbnails or boxes to the side of the DAVID MATHEWS PICTURE
-
-THEN HAVE A THIN DIVIDER LINE IN RED ------------------------------------------------------------
-Underneath the red line write "AROUND DISTRICT 7"
-Below this will be photos of Anna Marie, Paul Harrison, another with Dave Mathews,  one at Resurrection, one at Rye Free Reading Room, one at City Hall (courtesy of myRye.com)
-
-You can add the Map of District 7
  -->
 
-
-
-</p>
 
 </div>
 </body>
