--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <body class="contact-page">
 
-
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,8 +24,7 @@
           <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
           <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
-          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact/Volunteer</a></li>
           <li class="nav-item"><a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a></li>
         </ul>
       </div>
