--- a/endorsements.html
+++ b/endorsements.html
@@ -24,15 +24,14 @@
               <li class="nav-item"><a class="nav-link" href="./ontheissues.html">On the Issues</a></li>
               <li class="nav-item"><a class="nav-link" href="./experience.html">Experience</a></li>
               <li class="nav-item"><a class="nav-link" href="./arounddistrict7.html">Around District 7</a></li>
-              <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
-              <li class="nav-item"><a class="nav-link" href="./contact.html">Volunteer</a></li>
+              <li class="nav-item"><a class="nav-link" href="./contact.html">Contact/Volunteer</a></li>
               <li class="nav-item"><a class="nav-link btn button" href="https://www.anedot.com/">DONATE</a></li>
             </ul>
           </div>
         </div>
       </nav>
 
-      <div><h2 class="takesstand">Around Town</h2></div>
+      <div><h2 class="takesstand">A</h2></div>
       <div class="container">
     <p><img class="img-fluid keithcunningham mx-auto" src="./keithcunningham.jpg" />Keith Cunningham, Rye City Councilman
     January 2024 - Present <br>
@@ -48,13 +47,6 @@ David Mathews
 
 
 Write: Page in Progress then have some blank thumbnails or boxes to the side of the DAVID MATHEWS PICTURE
-
-THEN HAVE A THIN DIVIDER LINE IN RED ------------------------------------------------------------
-Underneath the red line write "AROUND DISTRICT 7"
-Below this will be photos of Anna Marie, Paul Harrison, another with Dave Mathews,  one at Resurrection, one at Rye Free Reading Room, one at City Hall (courtesy of myRye.com)
-
-You can add the Map of District 7
- -->
 
 
 
