--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -35,7 +35,7 @@
         <h2>Around District 7</h2>
       </div>
 
-  <div class="container mt-5 mb-5">
+  <div class="container mt-5 mb-5 addbgcolor">
     <img class="img-fluid district7 mx-auto" src="./district7.jpg" alt="Map of District 7"/>
   </div>
 
@@ -52,9 +52,20 @@ Dave Mathews,
 
 
  -->
+ <div class="container mt-5 mb-5">
+  <img class="img-fluid mx-auto"  src="./boiano.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
+ </div>
+
 <div class="container mt-5 mb-5">
- <img class="img-fluid mx-auto district7"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
+ <img class="img-fluid mx-auto"  src="./cosmo&alexpisanobros.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
 </div>
+
+
+
+<div class="container mt-5 mb-5">
+ <img class="img-fluid mx-auto"  src="./mamostation.jpg" alt="Cosmo & Alex Pisano Brothers Deli">
+</div>
+ 
 
 </div>
 </body>
