--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta property="og:title" content="Vote KVK - Kurt van Kuller for Westchester County Legislature" />
 <meta property="og:description" content="Learn more about Kurt van Kuller's campaign for Westchester County Legislator, District 7." />
 <meta property="og:image" content="https://votekvk.com/logo42425.jpg" />
-<meta property="og:url" content="https://votekvk.com/logo42425.jpg" />
+<meta property="og:url" content="https://votekvk.com" />
 <meta property="og:type" content="website" />
 
 <!-- Optional: Twitter Cards for better social previews -->
