--- a/endorsements.html
+++ b/endorsements.html
@@ -9,11 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
 </head>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <body>
     
   <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #003366;">
-    <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +26,6 @@
           <li class="nav-item"><a class="nav-link btn button" href="https://secure.anedot.com/friends-of-kurt-van-kuller/donate">DONATE</a></li>
         </ul>
       </div>
-    </div>
   </nav>
 
 
@@ -41,9 +38,9 @@
 </p>
 
 <p>
-    <!-- Lets add another page called Endorsements. At the top of the page put the word "Endorsements" -->
+    <!-- Lets add another page called Endorsements. At the top of the page put the word "Endorsements" 
 
-<!-- 
+
 David Mathews
 
 
@@ -52,7 +49,9 @@ Write: Page in Progress then have some blank thumbnails or boxes to the side of 
 
 
 </p>
-
+-->
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
