--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,7 @@
     <form name="contact" method="POST" action="https://formsubmit.co/friendsofkurtvk@gmail.com" class="form contactform">
       <!-- <input type="hidden" name="form-name" value="contact"> -->
       <!-- <input type="hidden" name="bot-field"> -->
-      <p class="mb-4 text-center">For questions, comments, or to volunteer, please fill out the form below, email: 
-        <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkurtvk@gmail.com</u></a>, or mail at: </p><br><div  class="address mt-2 mb-2 mx-auto text-center"><strong>Friends of Kurt van Kuller <br>41 Purdy Ave<br> PO Box 71<br>Rye, NY 10580</div><br></strong>
+      <p class="mb-4 text-center">For questions, comments, or to volunteer, please fill out the form below: </p>
         <!-- <p class="mb-6 text-center">I&#39;ll respond as soon as possible. Thank you!</p> -->
       
 
@@ -129,6 +128,9 @@
     </form>
   </div>
   </div>
+  <div  class="address mt-2 mb-2 mx-auto text-center"><u>Mailing Address: </u><br><strong>Friends of Kurt van Kuller <br>41 Purdy Ave, PO Box 71<br>Rye, NY 10580</strong></div><br></strong>
+  <div class="justify-content-center text-center mx-auto mb-5"><p class="emailclass">email: <a class="emailfriend" href="mailto:friendsofkvk@gmail.com"><u>friendsofkurtvk@gmail.com</u></a></p></div>
+  <footer></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
