--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -53,7 +53,7 @@ Dave Mathews,
 
  -->
  <div class="container mt-5 mb-5">
-  <img class="img-fluid mx-auto"  src="./ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
+  <img class="img-fluid mx-auto libraryphoto"  src="./ryefreereadingroom.jpeg" alt="Kurt outside Rye Free Reading Room">
  </div>
 
  <div class="container mt-5 mb-5">
