--- a/arounddistrict7.html
+++ b/arounddistrict7.html
@@ -8,6 +8,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
+
+    <!-- Essential Open Graph tags -->
+<meta property="og:title" content="Vote KVK - Kurt van Kuller for Westchester County Legislature" />
+<meta property="og:description" content="Learn more about Kurt van Kuller's campaign for Westchester County Legislator, District 7." />
+<meta property="og:image" content="https://votekvk.com/logo42425.jpg" />
+<meta property="og:url" content="https://votekvk.com" />
+<meta property="og:type" content="website" />
+
+<!-- Optional: Twitter Cards for better social previews -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Vote KVK" />
+<meta name="twitter:description" content="Support Kurt van Kuller for County Legislature." />
+<meta name="twitter:image" content="https://votekvk.com/logo42425.jpg" />
+
+
+
 </head>
 
 <body>
