--- a/endorsements.html
+++ b/endorsements.html
@@ -69,7 +69,9 @@ Write: Page in Progress then have some blank thumbnails or boxes to the side of 
 </p>
 -->
 </div>
-
+<footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
+  Powered by <strong>KullerCode</strong>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./script.js"></script>
 </body>
