--- a/experience.html
+++ b/experience.html
@@ -104,6 +104,9 @@
   <div class="container greybgexp mb-5">
     <p><strong><u>Education:</u></strong> MBA in Finance, SUNY Albany (1980), Full Scholarship. B.A. from SUNYA. Regents Scholarship recipient. Certified Financial Analyst (CFA) since 1993.</p>
   </div>
+  <footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
+    Powered by <strong>KullerCode</strong>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./script.js"></script>
 </body>
