--- a/ontheissues.html
+++ b/ontheissues.html
@@ -115,6 +115,9 @@
     </ul>
     <img class="kvk3 img-fluid d-block mx-auto" src="./kvk3.jpg" alt="Kurt" />
   </div>
+  <footer style="text-align: center; padding: 1rem; background-color: #003366; color: white; font-size: 1.1rem;">
+    Powered by <strong>KullerCode</strong>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./script.js"></script>
 </body>
